--- a/html/course-list.html
+++ b/html/course-list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<title>Our Courses</title>
+	<title>Instructors</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="AuCreative theme tempalte">
 	<meta name="author" content="AuCreative">
@@ -115,7 +115,7 @@
 							</div>
 				
 							<div class="form-group">
-								<button class="tg-btn" type="submit" id="submit"  ><span>Filter</span></button>
+								<button class="tg-btn" type="submit" id="submit"  ><span style="color: white;">Filter</span></button>
 							</div>
 						</fieldset>
 					</form>
@@ -135,12 +135,12 @@
 					</span>
 				</div>
 
-				<div class="pos-relative w-size8">
+				<!-- <div class="pos-relative w-size8">
 					<input class="size15 bo2 s-txt10 p-l-15 p-r-40" type="text" name="search" placeholder="Search Instructor Name">
 					<button class="flex-c-m size16 ab-t-r fs-15 color5 hov-color-main trans-03">
 						<i class="fa fa-search"></i>
 					</button>
-				</div>
+				</div> -->
 			</div>
 		
 			
