--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<title>Homepage 1</title>
+	<title>Home</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="AuCreative theme tempalte">
 	<meta name="author" content="AuCreative">
@@ -93,19 +93,12 @@
 					    data-height="['auto']">
 					    	<div class="p-l-10 p-r-10 p-t-5 p-b-5">
 					    		<!-- Button -->
-					    		<a href="#" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
-					    			Our Services
+					    		<a href="course-list.html" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
+					    			Book Now
 					    			<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
 					    		</a>
 					    	</div>
 
-					    	<div class="p-l-10 p-r-10 p-t-5 p-b-5">
-					    		<!-- Button -->
-					    		<a href="#" class="btn-drive size1 m-txt2 bgwhite bo-rad-4 trans-03">
-					    			Book Lesson
-					    			<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
-					    		</a>
-					    	</div>
 					    </div>
 						
 					</li>
@@ -146,21 +139,14 @@
 					    data-hoffset="['0','0','0','0']" 
 					    data-voffset="['75','75','75','90']"
 					    data-height="['auto']">
-					    	<div class="p-l-10 p-r-10 p-t-5 p-b-5">
-					    		<!-- Button -->
-					    		<a href="#" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
-					    			Our Services
-					    			<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
-					    		</a>
-					    	</div>
+						<div class="p-l-10 p-r-10 p-t-5 p-b-5">
+							<!-- Button -->
+							<a href="course-list.html" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
+								Book Now
+								<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
+							</a>
+						</div>
 
-					    	<div class="p-l-10 p-r-10 p-t-5 p-b-5">
-					    		<!-- Button -->
-					    		<a href="#" class="btn-drive size1 m-txt2 bgwhite bo-rad-4 trans-03">
-					    			Book Lesson
-					    			<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
-					    		</a>
-					    	</div>
 					    </div>
 					</li>
 
@@ -200,22 +186,14 @@
 					    data-hoffset="['0','0','0','0']" 
 					    data-voffset="['75','75','75','90']"
 					    data-height="['auto']">
-					    	<div class="p-l-10 p-r-10 p-t-5 p-b-5">
-					    		<!-- Button -->
-					    		<a href="#" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
-					    			Our Services
-					    			<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
-					    		</a>
-					    	</div>
+						<div class="p-l-10 p-r-10 p-t-5 p-b-5">
+							<!-- Button -->
+							<a href="course-list.html" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
+								Book Now
+								<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
+							</a>
+						</div>
 
-					    	<div class="p-l-10 p-r-10 p-t-5 p-b-5">
-					    		<!-- Button -->
-					    		<a href="#" class="btn-drive size1 m-txt2 bgwhite bo-rad-4 trans-03">
-					    			Book Lesson
-					    			<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
-					    		</a>
-					    	</div>
-					    </div>
 					</li>
 
 
@@ -573,13 +551,7 @@
 <!--===============================================================================================-->
 	<script src="../vendor/lightbox2/js/lightbox.min.js"></script>
 <!--===============================================================================================-->
-	<script src="../vendor/parallax100/parallax100.js"></script>
-	<script>
-        $('.parallax100').parallax100();
-	</script>
-<!--===============================================================================================-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes"></script>
-	<script src="../js/map-custom.js"></script>
+
 <!--===============================================================================================-->
 	<script src="../js/main.js"></script>
 	
