--- a/html/footer.html
+++ b/html/footer.html
@@ -66,7 +66,7 @@
 					</div>
 
 					<p class="s-txt9 p-t-30">
-						DriverZone is estalibished in 2021 and it is an online portal to allow users to find private driving instructors based on their requirements.
+						DriverZone is established in 2021 and it is an online portal to allow users to find private driving instructors based on their requirements.
 					</p>
 				</div>
 				
