--- a/html/navbar.html
+++ b/html/navbar.html
@@ -117,7 +117,7 @@
         ` +name + `
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="profilepage.html">My Profile</a>
+        <a class="dropdown-item" href="dashboard.html">My Profile</a>
         <a class="dropdown-item" href="#" onclick=logout()>Log Out</a>
       
       </div>
