--- a/html/course-list.html
+++ b/html/course-list.html
@@ -13,9 +13,9 @@
 <link rel="stylesheet" href="../filterbar/css/bootstrap-select.css">
 <link rel="stylesheet" href="../filterbar/css/main.css">
 <link rel="stylesheet" href="../filterbar/css/color.css">
-<link rel="stylesheet" href="../filterbar/css/responsive.css">
+<!-- <link rel="stylesheet" href="../filterbar/css/responsive.css"> -->
 
-	<link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" type="text/css" href="../vendor/animsition/dist/css/animsition.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
