--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -79,7 +79,7 @@
                                         </div>
                                         <div class="col-sm-8">
                                             <div class="detail">
-                                                <p class="detail-subtitle">Completed lessons</p>
+                                                <p class="detail-subtitle">number of Completed lessons</p>
                                                 <br/>
                                                 <span class="number" id="completed"></span>
                                             </div>
@@ -127,7 +127,7 @@
                                         </div>
                                         <div class="col-sm-8">
                                             <div class="detail">
-                                                <p class="detail-subtitle">Next Lesson</p>
+                                                <p class="detail-subtitle">Date for Next Lesson</p>
                                                 <br/>
                                                 <span class="number" id="nextlesson"></span>
                                             </div>
@@ -172,7 +172,7 @@
                                 <div class="content">
 
                                     <h5 class="mb-0">Maps</h5>
-                                    <div id="map" style="width:100%;height:400px;padding:0px;margin:0px;"></div>
+                                    <div id="map" class="border border-dark bg-light text-dark" style="width:100%;height:400px;padding:0px;margin:0px;"></div>
                                 </div>
                             </div>
                         </div>
@@ -209,60 +209,68 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-6 col-md-6 col-lg-3">
-                            <div class="card">
-                                <div class="content">
-                                    <div class="row">
-                                        <div class="dfd text-center">
-                                            <i class="blue large-icon mb-2 fas fa-thumbs-up"></i>
-                                            <h4 class="mb-0">+21,900</h4>
-                                            <p class="text-muted">FACEBOOK PAGE LIKES</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-6 col-lg-3">
-                            <div class="card">
-                                <div class="content">
-                                    <div class="row">
-                                        <div class="dfd text-center">
-                                            <i class="orange large-icon mb-2 fas fa-reply-all"></i>
-                                            <h4 class="mb-0">+22,566</h4>
-                                            <p class="text-muted">INSTAGRAM FOLLOWERS</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-6 col-lg-3">
-                            <div class="card">
-                                <div class="content">
-                                    <div class="row">
-                                        <div class="dfd text-center">
-                                            <i class="grey large-icon mb-2 fas fa-envelope"></i>
-                                            <h4 class="mb-0">+15,566</h4>
-                                            <p class="text-muted">E-MAIL SUBSCRIBERS</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-6 col-lg-3">
-                            <div class="card">
-                                <div class="content">
-                                    <div class="row">
-                                        <div class="dfd text-center">
-                                            <i class="olive large-icon mb-2 fas fa-dollar-sign"></i>
-                                            <h4 class="mb-0">+98,601</h4>
-                                            <p class="text-muted">TOTAL SALES</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                   <div class="row">
+                    <div class="head" style="margin-left:10px;">
+                        <h5 class="mb-0">Upcoming lessons</h5>
+                       
                     </div>
+                    <div class="canvas-wrapper">
+                        <table class="table table-striped" style="margin-left:10px;">
+                            <thead class="success">
+                                <tr>
+                                    <th>Date of Lesson</th>
+                                    <th>Time of Lesson</th>
+                                    <th>Instructor</th>
+                                    <th>Location</th>
+                                </tr>
+                            </thead>
+                            <tbody id="top5body">
+                                <tr>
+                                    <td> United States</td>
+                                    <td class="text-end">27,340</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="flag-icon flag-icon-in"></i> India</td>
+                                    <td class="text-end">21,280</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="flag-icon flag-icon-jp"></i> Japan</td>
+                                    <td class="text-end">18,210</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="flag-icon flag-icon-gb"></i> United Kingdom</td>
+                                    <td class="text-end">15,176</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="flag-icon flag-icon-es"></i> Spain</td>
+                                    <td class="text-end">14,276</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="flag-icon flag-icon-de"></i> Germany</td>
+                                    <td class="text-end">13,176</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="flag-icon flag-icon-br"></i> Brazil</td>
+                                    <td class="text-end">12,176</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="flag-icon flag-icon-id"></i> Indonesia</td>
+                                    <td class="text-end">11,886</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="flag-icon flag-icon-ph"></i> Philippines</td>
+                                    <td class="text-end">11,509</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="flag-icon flag-icon-nz"></i> New Zealand</td>
+                                    <td class="text-end">1,700</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+
+                   </div>
                 </div>
             </div>
         </div>
