--- a/html/cur_post.html
+++ b/html/cur_post.html
@@ -14,6 +14,7 @@
         <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
 
         <script src="../js/cur_post.js"></script>
+        <link rel="stylesheet" type="text/css" href="..\fonts\font-awesome-4.7.0\css\font-awesome.css">
 
     
     </head>
@@ -54,7 +55,6 @@
                 </div>
             </div>
         </div>
-
 
         <div class="container">
             <div class="row justify-content-center pt-2" id="content_here">
