--- a/html/forum.html
+++ b/html/forum.html
@@ -342,5 +342,8 @@
             }
 
         </script>
+
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     </body>
 </html>
