--- a/html/timetable.html
+++ b/html/timetable.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TimeTable</title>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <!-- Add the evo-calendar.css for styling -->
     <link rel="stylesheet" type="text/css" href="../css/evo_calendar/evo-calendar.css"/>
-    <link rel="stylesheet" type="text/css" href="../css/evo_calendar/evo-calendar.midnight-blue.min.css"/>
-    <link rel="stylesheet" type="text/css" href="../css/timetable.css"
+    <link rel="stylesheet" type="text/css" href="../css/evo_calendar/evo-calendar.royal-navy.min.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/timetable.css">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
 
 </head>
 <body>
     <div id="nav-placeholder"></div>
-    <section class="bg-img-1 bg-overlay-3 p-t-0 p-b-50" style="background-image: url('../images/carousel1.jpg');">
+    <section class="p-t-0 p-b-10" style="background-color:#222831;">
         <div class="container">
             <div class="flex-w flex-sb-m">
                 <div class="p-t-10 p-b-10 p-r-30">
@@ -28,12 +32,11 @@
             <i class="fa fa-users"></i>
                 TimeTable
             </a>
-            <div class="container p-t-50 p-b-10">
             <div class="row">
-                <div class="col-md" id="left-stuff">
-                    <h1 id="nxt_lesson">Your Next Lesson:</h1>
+                <div class="col-md p-t-10" id="left-stuff">
+                    <h1 id="nxt_lesson">Your next lesson is on</h1>
+                    <p class="lead pt-4 text-white" style="font-size: 15px;" id="instr_quote">View all details of your bookings below.</p>
                 </div>
-                
             </div>
     </section>
     <div class="container-fluid">
