--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -29,6 +29,7 @@
        <div style="text-align: center; margin: auto; padding: 25px;">	
         <h3>Your Booking Has been Successfully Confirmed!</h3>
     </br>
+        <a href="timetable.html" class="myButton" type=button value="" >Back to Home</a>
         <a href="index.html" class="myButton" type=button value="" >Back to Home</a>
        </div>
        <div style="height:40%">
