--- a/html/navbar.html
+++ b/html/navbar.html
@@ -74,6 +74,10 @@
               <a href="course-list.html">Instructors</a>
             </li>
 
+            <li>
+              <a href="timetable.html">My Timetable</a>
+            </li>
+
             <li class="respon-sub-menu">
               <a href="forum.html">Forum</a>
             </li>
