--- a/html/navbar.html
+++ b/html/navbar.html
@@ -74,9 +74,6 @@
               <a href="course-list.html">Instructors</a>
             </li>
 
-            <li>
-              <a href="timetable.html">My Timetable</a>
-            </li>
 
             <li class="respon-sub-menu">
               <a href="forum.html">Forum</a>
@@ -122,6 +119,7 @@
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="dashboard.html">My Profile</a>
+        <a class="dropdown-item" href="timetable.html">My Timetable</a>
         <a class="dropdown-item" href="#" onclick=logout()>Log Out</a>
       
       </div>
