--- a/html/timetable.html
+++ b/html/timetable.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../css/evo_calendar/evo-calendar.royal-navy.min.css"/>
     <link rel="stylesheet" type="text/css" href="../css/timetable.css">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
@@ -55,7 +56,8 @@
 
     <div id="footer"></div>
 
-    
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
 
 
 
