--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="../css/confirm.css">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
@@ -29,7 +30,7 @@
        <div style="text-align: center; margin: auto; padding: 25px;">	
         <h3>Your Booking Has been Successfully Confirmed!</h3>
     </br>
-        <a href="timetable.html" class="myButton" type=button value="" >Back to Home</a>
+        <a href="timetable.html" class="myButton" type=button value="" >View Timetable</a>
         <a href="index.html" class="myButton" type=button value="" >Back to Home</a>
        </div>
        <div style="height:40%">
@@ -50,6 +51,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
         <script>
             $(function() {
