--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Calendar</title>
-
     <link rel="stylesheet" href="../css/confirm.css">
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body style="height:100%">
@@ -27,11 +27,26 @@
                  c-9.9-0.46-18.128-8.344-18.972-18.218c-0.292-3.416,0.276-6.673,1.51-9.578"/>
              </svg>
    </div>
-       <div style="text-align: center; margin: auto; padding: 25px;">	
-        <h3>Your Booking Has been Successfully Confirmed!</h3>
+       <div style="text-align: center; margin: auto; padding: 25px;" id="app">	
+        <h3>{{celebrate}}</h3>
     </br>
-        <a href="timetable.html" class="myButton" type=button value="" >View Timetable</a>
-        <a href="index.html" class="myButton" type=button value="" >Back to Home</a>
+        <div class='container' style="background-color: #222831;width:40%;border-radius:20px;">
+            <div class="row justify-content-center pt-3">
+                <div class="col">
+                    <img :src="icon" style="padding:10px;">
+                    <span class="text-center text-white" style="font-size:23px;">{{book_details}}</span>
+                </div>
+            </div>
+            <div class="row justify-content-center" v-for="(i,index) in icon_pack">
+                <div class="col">
+                    <img :src="'../icons/' + i" style="padding:10px;">
+                    <span class="text-center text-white ">{{detailsobj()[index]}}</br></span>
+                </div>
+            </div>
+        </div>
+
+        <a href="timetable.html" class="myButton mt-4 mr-1" type=button value="" >View Timetable</a>
+        <a href="index.html" class="myButton mt-4" type=button value="" >Back to Home</a>
        </div>
        <div style="height:40%">
 
@@ -52,7 +67,28 @@
 
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
+        <script>
+            const app = Vue.createApp({
+                data() {
+                    return {
+                        celebrate:"Your Booking Has been Successfully Confirmed!",
+                        book_details:"These are your booking details:",
+                        icon:"../icons/list.png",
+                        icon_pack:["instructor.png","clock.png","date.png"],
+                        count:0,
+                        text:"text-white"
+                    };
+                },
+                methods: {
+                    detailsobj(){
+                        var str = sessionStorage.getItem("bookdetails");
+                        var arr = str.split(",");
+                        return arr
+                    }
+                }
+            });
+            app.mount("#app");
+        </script>
         <script>
             $(function() {
                 $("#nav-placeholder").load("navbar.html");
