--- a/html/login.html
+++ b/html/login.html
@@ -68,11 +68,11 @@
 	                        <div class="input_style_1">
 	                            <div class="form-group">
 	                                <label for="email_address">Email Address</label>
-	                                <input type="email" name="email_address" id="email_address" class="form-control">
+	                                <input type="email" name="email_address" id="email_address" class="form-control" value="johnsoh@gmail.com">
 	                            </div>
 	                            <div class="form-group">
 	                                <label for="password">Password</label>
-	                                <input type="password" name="password" id="password" class="form-control">
+	                                <input type="password" name="password" id="password" class="form-control" value="12345">
 	                            </div>
 	                            <div class="clearfix mb-3">
 	                                <div class="float-left">
