--- a/html/timetable.html
+++ b/html/timetable.html
@@ -15,6 +15,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
 
 </head>
 <body>
@@ -33,9 +34,9 @@
             <i class="fa fa-users"></i>
                 TimeTable
             </a>
-            <div class="row">
-                <div class="col-md p-t-10" id="left-stuff">
-                    <h1 id="nxt_lesson">Your next lesson is on</h1>
+            <div class="row" id="app">
+                <div class="col-md p-t-10">
+                    <h2 class="text-white">Your next lesson is on <h1 class="text-muted">{{getDetails[0]}}, {{getDetails[1]}} {{getDetails[2]}} {{getDetails[3]}} with Instructor {{getDetails[4]}}</h> </h1> </h2>
                     <p class="lead pt-4 text-white" style="font-size: 15px;" id="instr_quote">View all details of your bookings below.</p>
                 </div>
             </div>
