--- a/html/booking.html
+++ b/html/booking.html
@@ -26,7 +26,7 @@
             <i class="fa fa-home"></i>
             Home / 
             </a>
-            <a href="course-.html" class="s-txt19 hov-color-main trans-02">
+            <a href="course-list.html" class="s-txt19 hov-color-main trans-02">
             <i class="fa fa-users"></i>
                 Instructors /
             </a>
@@ -34,12 +34,12 @@
             <div class="container p-t-50 p-b-10">
             <div class="row">
                 <div class="col-md" id="left-stuff">
-                    <h1 id="instr_title">We focus on your Story</h1>
-                    <p class="lead pt-4 text-white" style="font-size: 15px;" id="instr_quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio reprehenderit earum sed porro nesciunt vitae voluptas sit ullam, quibusdam repellendus iusto commodi quo dolor vero possimus nemo cupiditate unde. Eaque!</p>
+                    <h1 id="instr_title"></h1>
+                    <p class="lead pt-4 text-white" style="font-size: 15px;" id="instr_quote"></p>
                 </div>
                 <div class="col-md">
-                    <img src="../images/random person.jpg" id="instructor-img" class='mx-auto d-block '>
-                    <span id='instructor-name' class='mx-auto d-block text-white'>Instructor name</span>
+                    <img src="" id="instructor-img" class='mx-auto d-block '>
+                    <span id='instructor-name' class='mx-auto d-block text-white'></span>
                     </div>
                 </div>
             </div>
