update login and signup texts

--- a/html/login.html
+++ b/html/login.html
@@ -54,7 +54,7 @@
 	                <!-- /social -->
 	                <div>
 	                    <h1>DriverZone Login</h1>
-	                    <p>Get access to our all in one application to help you pass your driving test!.</p>
+	                    <p>Get access to our all in one application to help you pass your driving test!</p>
 	                    
 	                </div>
 	            </div>
