--- a/html/signup.html
+++ b/html/signup.html
@@ -56,7 +56,7 @@
 	                <!-- /social -->
 	                <div>
 	                    <h1>Driver Zone Registration</h1>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	                    <p>Get access to our all in one application to help you pass your driving test!</p>
 	                    
 	                </div>
 	            </div>
