--- a/html/cur_post.html
+++ b/html/cur_post.html
@@ -126,4 +126,7 @@
             document.getElementById("give_downvote").setAttribute("class","fa fa-arrow-circle-o-down fa-3x")
         }
     </script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+
     </body>
