--- a/html/confirm_booking.html
+++ b/html/confirm_booking.html
@@ -117,14 +117,29 @@
                     }, (error) => {
                         if (error) {
                             // The write failed...
+                            console.log("here")
                         alert("There was a problem with booking, please try again!")
                         } else {
                             // Data saved successfully!
+                            var newRef = firebase.database().ref(`instructor/${instr}/date/${unixTimeStamp}`);
+                            newRef.once("value")
+                            .then(function(snapshot){
+                            var instr_db = snapshot.val()
+                            console.log(instr_db)
+                            console.log(instr_db)
+                            for(let ele in instr_db){
+                                console.log(instr_db[ele])
+                                if(instr_db[ele].description == time){
+                                //get element from db
+                                var refNeeded = firebase.database().ref(`instructor/${instr}/date/${unixTimeStamp}/${ele}`);
+                                // edit availability status
+                                    refNeeded.update({name:"Booked"})
+                                    }
                             window.location.href = "confirmation.html";
                     }
                 }
             )}
-                }});
+                })}}});
             app.mount("#app");
         </script>
         <script>
