--- a/html/add_post.html
+++ b/html/add_post.html
@@ -56,6 +56,8 @@
             </div>
         </div>
 
+        <div id="footer" class="pt-5"></div>
+
         <script>
             $(function()
             {
@@ -126,5 +128,17 @@
         }
         }
         </script>
+
+<script>
+    $(function(){
+        $("#nav-placeholder").load("navbar.html");
+    });
+    $(function(){
+        $("#footer").load("footer.html");
+    });
+</script>
+
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     </body>
 </html>
