--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -74,7 +74,7 @@
                         celebrate:"Your Booking Has been Successfully Confirmed!",
                         book_details:"These are your booking details:",
                         icon:"../icons/list.png",
-                        icon_pack:["instructor.png","clock.png","date.png"],
+                        icon_pack:["instructor.png","clock.png","date.png","money.png"],
                     };
                 },
                 methods: {
@@ -83,9 +83,11 @@
                         var instr = sessionStorage.getItem("instructor");
                         var time = sessionStorage.getItem("time");
                         var date = sessionStorage.getItem("date");
+                        var cost = sessionStorage.getItem("cost");
                         arr.push(instr);
                         arr.push(time);
                         arr.push(date);
+                        arr.push(cost);
                         return arr
                     }
                 }
