quote and name fix

--- a/html/booking.html
+++ b/html/booking.html
@@ -37,11 +37,11 @@
             <a class="s-txt19 hov-color-main trans-02 text-white" >Booking</a>
             <div class="row" >
                 <div class="col-md p-t-10 m-t-10">
-                    <img src="../images/Aryan Dash.JPG" class="ml-5 rounded" style="width:140px;height:140px">
+                    <img src="" class="ml-5 rounded" style="width:140px;height:140px" id="instructor_img">
                 </div>
                 <div class="col-lg-7" style="margin-top:30px">
-                    <h2 class="text-white" >Instructor Aryan Dash</h2>
-                    <h3>Quote here</h3>
+                    <h2 class="text-white" id="instructor_name">Instructor Aryan Dash</h2>
+                    <h3 id="quote">Quote here</h3>
                 </div>
             </div>
     </section>
