--- a/html/forum.html
+++ b/html/forum.html
@@ -259,7 +259,7 @@
                         var cur_row_id = rows[i].id
                         var row_tag = rows[i].getElementsByTagName("td")
                         console.log(row_tag[0].innerHTML)
-                        if (row_tag[0].innerHTML != `<i class="fa fa-book"></i>`)
+                        if (row_tag[0].innerHTML != `<i class="fa fa-book fa-2x"></i>`)
                         {
                             rows[i].setAttribute("style","display:none")
                             
@@ -286,7 +286,7 @@
                     {
                         var cur_row_id = rows[i].id
                         var row_tag = rows[i].getElementsByTagName("td")
-                        if (row_tag[0].innerHTML != `<i class="fa fa-car"></i>`)
+                        if (row_tag[0].innerHTML != `<i class="fa fa-car fa-2x"></i>`)
                         {
                             rows[i].setAttribute("style","display:none")
                         }
@@ -313,7 +313,7 @@
                     {
                         var cur_row_id = rows[i].id
                         var row_tag = rows[i].getElementsByTagName("td")
-                        if (row_tag[0].innerHTML != `<i class="fa fa-comments"></i>`)
+                        if (row_tag[0].innerHTML != `<i class="fa fa-comments fa-2x"></i>`)
                         {
                             rows[i].setAttribute("style","display:none")
                         }
