--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -215,7 +215,7 @@
                     </div>
                    <div class="row">
                     <div class="head" style="margin-left:10px;">
-                        <h5 class="mb-0">Upcoming lessons</h5>
+                        <h5 class="mb-0">Upcoming lessons (max 5 is shown)</h5>
                        
                     </div>
                     <div class="canvas-wrapper">
