--- a/html/navbar.html
+++ b/html/navbar.html
@@ -120,6 +120,7 @@
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="dashboard.html">My Profile</a>
         <a class="dropdown-item" href="timetable.html">My Timetable</a>
+        <a class="dropdown-item" href="telegramhelp.html">Telegram FAQ</a>
         <a class="dropdown-item" href="#" onclick=logout()>Log Out</a>
       
       </div>
