--- a/html/navbar.html
+++ b/html/navbar.html
@@ -101,9 +101,9 @@
        
       }
       else{
-        //commenting this part out cos testing
+       
         alert("Please log in first!");
-        //window.location.href = "login.html"; 
+        window.location.href = "login.html"; 
       }
     }
     else{
