--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -14,7 +14,7 @@
     <link href="../Profile Page/assets/css/master.css" rel="stylesheet">
     <link href="../Profile Page/assets/vendor/flagiconcss/css/flag-icon.min.css" rel="stylesheet">
 
-    <script type="text/javascript" src="http://gothere.sg/jsapi?sensor=false"> </script>
+    <script type="text/javascript" src="https://gothere.sg/jsapi?sensor=false"> </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://momentjs.com/downloads/moment.min.js"></script>
@@ -215,7 +215,7 @@
                     </div>
                    <div class="row">
                     <div class="head" style="margin-left:10px;">
-                        <h5 class="mb-0">Upcoming lessons</h5>
+                        <h5 class="mb-0">Upcoming lessons (max 5 is shown)</h5>
                        
                     </div>
                     <div class="canvas-wrapper">
