--- a/public/html/profilepage.html
+++ b/public/html/profilepage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile</title>
-    <script type="text/javascript" src="http://gothere.sg/jsapi?sensor=false"> </script>
+    <script type="text/javascript" src="https://gothere.sg/jsapi?sensor=false"> </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
 <script src="https://momentjs.com/downloads/moment.min.js"></script>
