--- a/public/html/booking.html
+++ b/public/html/booking.html
@@ -76,7 +76,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
 
     <!-- Add the evo-calendar.js for.. obviously, functionality! -->
-    <script src="../js/evo_js/evo-calendar.js"></script>
+    <script src="../js/evo_js/evo-calendar_booking.js"></script>
     
     <!-- Timetable.JS-->
 
