--- a/public/html/cur_post.html
+++ b/public/html/cur_post.html
@@ -51,13 +51,13 @@
                                             <h2 id="post_title"></h4>
                                         </div>
                                         <div class="col-1">
-                                            <button type="button" id="give_upvote" style="float: left;" onclick="give_upvote()" onmouseover="select_upvote()" onmouseleave="unselect_upvote()" class="fa fa-arrow-circle-o-up fa-3x"></button>
+                                            <button type="button" id="give_upvote" style="float: right;" onclick="give_upvote()" onmouseover="select_upvote()" onmouseleave="unselect_upvote()" class="fa fa-arrow-circle-o-up fa-3x"></button>
                                         </div>
                                         <div class="col-1 justify-content-center">
                                             <h4 id="upvote_count" class="text-center"></h4>
                                         </div>
                                         <div class="col-1">
-                                            <button type="button" id="give_downvote" style="float: right;" onclick="give_downvote()" onmouseover="select_downvote()" onmouseleave="unselect_downvote()" class="fa fa-arrow-circle-o-down fa-3x"></button>
+                                            <button type="button" id="give_downvote" style="float: left;" onclick="give_downvote()" onmouseover="select_downvote()" onmouseleave="unselect_downvote()" class="fa fa-arrow-circle-o-down fa-3x"></button>
                                         </div>
                                     </div>
                                 </div>
