--- a/html/login.html
+++ b/html/login.html
@@ -92,7 +92,7 @@
 	                                <h4 class="mb-3">Forgot Password</h4>
 	                                <div class="form-group">
 	                                    <label for="email_forgot">Login email</label>
-	                                    <input type="email" class="form-control" name="email_forgot" id="email_forgot">
+	                                    <input type="email" class="form-control" name="email_forgot" id="email_forgot" placeholder="test@gmail.com">
 	                                </div>
 	                                <p>You will receive an email containing a link allowing you to reset your password to a new preferred one.</p>
 	                                <div class="text-center"><input type="submit" value="Reset Password" class="btn_1"></div>
