--- a/public/html/login.html
+++ b/public/html/login.html
@@ -67,7 +67,7 @@
 	                        <div class="input_style_1">
 	                            <div class="form-group">
 	                                <label for="email_address">Email Address</label>
-	                                <input type="email" name="email_address" id="email_address" class="form-control">
+	                                <input type="email" name="email_address" id="email_address" class="form-control" placeholder="test@gmail.com">
 	                            </div>
 	                            <div class="form-group">
 	                                <label for="password">Password</label>
