--- a/public/html/change_booking.html
+++ b/public/html/change_booking.html
@@ -11,7 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
-    <script src="https://unpkg.com/vue@next"></script>
+    <script src="../js/vue.min.js"></script>
 </head>
 <body>
     <div id="nav-placeholder"></div>
