--- a/public/html/timetable.html
+++ b/public/html/timetable.html
@@ -15,7 +15,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
-    <script src="https://unpkg.com/vue@next"></script>
 
 </head>
 <body>
@@ -35,12 +34,12 @@
                 TimeTable
             </a>
             <div class="row" id="app">
-                <div class="col-md p-t-10">
+                <div class="col-md p-t-10" id="next_lesson_info">
                     <div v-if="not_avail">
                         <h2 class="text-danger" >You need to book a lesson with an instructor first</h2>
                     </div>
                     <div v-else>
-                        <h2 class="text-white" >Your next lesson is on <h1 class="text-muted">{{getDetails[0]}}, {{getDetails[1]}} {{getDetails[2]}} {{getDetails[3]}} with Instructor {{getDetails[4]}} </h1> </h2>
+                        <h2 class="text-white" >Your next lesson is on <h1 class="text-muted" id="next_lesson_info"> </h1> </h2>
                         <p class="lead pt-4 text-white" style="font-size: 15px;" id="instr_quote">View all details of your bookings below.</p>
                     </div>
                 </div>
