--- a/public/html/booking.html
+++ b/public/html/booking.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TimeTable</title>
+    <title>Booking</title>
     <!-- Add the evo-calendar.css for styling -->
     <link rel="stylesheet" type="text/css" href="../css/evo_calendar/evo-calendar.css"/>
     <link rel="stylesheet" type="text/css" href="../css/evo_calendar/evo-calendar.royal-navy.min.css"/>
