--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dashboard | Bootstrap Simple Admin Template</title>
+    <title>My Dashboard</title>
     <link href="../Profile Page/assets/vendor/fontawesome/css/fontawesome.min.css" rel="stylesheet">
     <link href="../Profile Page/assets/vendor/fontawesome/css/solid.min.css" rel="stylesheet">
     <link href="../Profile Page/assets/vendor/fontawesome/css/brands.min.css" rel="stylesheet">
