--- a/html/course-list.html
+++ b/html/course-list.html
@@ -67,9 +67,9 @@
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<form class="tg-formtrip">
 						<fieldset>
-							<div class="form-group">
-								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" data-width="100%" id="location" >
+							<div class="form-group " >
+								<div class="tg-select " >
+									<select class="selectpicker" data-live-search="true" data-width="100%" id="location"  >
 										<option>Location</option>
 										<option data-tokens="Woodlands" value="woodlands">Woodlands</option>
 										<option data-tokens="Yishun" value="yishun" >Yishun</option>
@@ -79,9 +79,9 @@
 									</select>
 								</div>
 							</div>
-							<div class="form-group">
+							<div class="form-group ">
 								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" data-width="100%" id="rating">
+									<select class="selectpicker" data-live-search="true" data-width="100%" id="rating" col-sm-6>
 										<option>Rating</option>
 										<option data-tokens="5 Stars" >5 Stars</option>
 										<option data-tokens="4 Stars" >4 Stars</option>
@@ -93,7 +93,7 @@
 							</div>
 							<div class="form-group">
 								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" data-width="100%" id="language">
+									<select class="selectpicker" data-live-search="true" data-width="100%" id="language" col-sm-6>
 										<option>Language</option>
 										<option data-tokens="English" id="english">English</option>
 										<option data-tokens="Malay" id="malay">Malay</option>
@@ -104,7 +104,7 @@
 							</div>
 							<div class="form-group">
 								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" data-width="100%" id="budget">
+									<select class="selectpicker" data-live-search="true" data-width="100%" id="budget" col-sm-6>
 										<option>Budget</option>
 										<option data-tokens="$50" id="50">$50</option>
 										<option data-tokens="$70" id="70">$70</option>
