--- a/html/course-list.html
+++ b/html/course-list.html
@@ -64,55 +64,66 @@
 			
 		
 			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<form class="tg-formtrip">
 						<fieldset>
-							<div class="form-group " >
-								<div class="tg-select " >
-									<select class="selectpicker" data-live-search="true" data-width="100%" id="location"  >
-										<option>Location</option>
-										<option data-tokens="Woodlands" value="woodlands">Woodlands</option>
-										<option data-tokens="Yishun" value="yishun" >Yishun</option>
-										<option data-tokens="Clementi" value="clementi" >Clementi</option>
-										<option data-tokens="Yio Chu Kang" id="yio chu kang">Yio Chu Kang</option>
-										<option data-tokens="Eunos" id="eunos">Eunos</option>
-									</select>
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+								<div class="form-group ">
+									<div class="tg-select " >
+										<select class="selectpicker" data-live-search="true" data-width="100%" id="location"  >
+											<option>Location</option>
+											<option data-tokens="Woodlands" value="woodlands">Woodlands</option>
+											<option data-tokens="Yishun" value="yishun" >Yishun</option>
+											<option data-tokens="Clementi" value="clementi" >Clementi</option>
+											<option data-tokens="Yio Chu Kang" id="yio chu kang">Yio Chu Kang</option>
+											<option data-tokens="Eunos" id="eunos">Eunos</option>
+										</select>
+									</div>
 								</div>
 							</div>
-							<div class="form-group ">
-								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" data-width="100%" id="rating" col-sm-6>
-										<option>Rating</option>
-										<option data-tokens="5 Stars" >5 Stars</option>
-										<option data-tokens="4 Stars" >4 Stars</option>
-										<option data-tokens="3 Stars" >3 Stars</option>
-										<option data-tokens="2 Stars" >2 Stars</option>
-										<option data-tokens="1 Stars" >1 Stars</option>
-									</select>
+
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+								<div class="form-group ">
+									<div class="tg-select">
+										<select class="selectpicker" data-live-search="true" data-width="100%" id="rating" col-sm-6>
+											<option>Rating</option>
+											<option data-tokens="5 Stars" >5 Stars</option>
+											<option data-tokens="4 Stars" >4 Stars</option>
+											<option data-tokens="3 Stars" >3 Stars</option>
+											<option data-tokens="2 Stars" >2 Stars</option>
+											<option data-tokens="1 Stars" >1 Stars</option>
+										</select>
+									</div>
 								</div>
 							</div>
-							<div class="form-group">
-								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" data-width="100%" id="language" col-sm-6>
-										<option>Language</option>
-										<option data-tokens="English" id="english">English</option>
-										<option data-tokens="Malay" id="malay">Malay</option>
-										<option data-tokens="Tamil" id="tamil">Tamil</option>
-										<option data-tokens="Chinese" id="chinese">Chinese</option>
-									</select>
+
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+								<div class="form-group">
+									<div class="tg-select">
+										<select class="selectpicker" data-live-search="true" data-width="100%" id="language" col-sm-6>
+											<option>Language</option>
+											<option data-tokens="English" id="english">English</option>
+											<option data-tokens="Malay" id="malay">Malay</option>
+											<option data-tokens="Tamil" id="tamil">Tamil</option>
+											<option data-tokens="Chinese" id="chinese">Chinese</option>
+										</select>
+									</div>
 								</div>
 							</div>
-							<div class="form-group">
-								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" data-width="100%" id="budget" col-sm-6>
-										<option>Budget</option>
-										<option data-tokens="$50" id="50">$50</option>
-										<option data-tokens="$70" id="70">$70</option>
-										<option data-tokens="$90" id="90">$90</option>
-										<option data-tokens="$100" id="100">$100</option>
-									</select>
+
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+								<div class="form-group">
+									<div class="tg-select">
+										<select class="selectpicker" data-live-search="true" data-width="100%" id="budget" col-sm-6>
+											<option>Budget</option>
+											<option data-tokens="$50" id="50">$50</option>
+											<option data-tokens="$70" id="70">$70</option>
+											<option data-tokens="$90" id="90">$90</option>
+											<option data-tokens="$100" id="100">$100</option>
+										</select>
+									</div>
 								</div>
 							</div>
+
 				
 							<div class="form-group">
 								<button class="tg-btn" type="submit" id="submit"  ><span style="color: white;">Filter</span></button>
